2008-06-02  Sebastian Dröge  <slomo@circular-chaos.org>

	* src/Backends/Banshee.GStreamer/Banshee.GStreamer/PlayerEngine.cs:
	Rename local variable from db to scale as it holds a scale factor
	which was calculated from a db value and not the other way around.

	* src/Core/Banshee.Services/Banshee.Equalizer/EqualizerManager.cs:
	* src/Core/Banshee.Services/Banshee.Equalizer/EqualizerSetting.cs:
	0dB is passthrough and should be used as default value. 1dB will make
	the sound a bit louder and can already lead to clipping in rare
	situations.

	* src/Core/Banshee.ThickClient/Banshee.Equalizer.Gui/EqualizerView.cs:
	Make the preamp levels more consistent with the eq levels and don't
	always do (level / 10) * 10.

2008-06-02  Sebastian Dröge  <slomo@circular-chaos.org>

	* src/Core/Banshee.Core/Banshee.Core.dll.config:
	* src/Core/Banshee.Core/Makefile.am:
	* src/Core/Banshee.Widgets/Banshee.Widgets.dll.config:
	* src/Core/Banshee.Widgets/Makefile.am: Add some missing dllmaps.

2008-05-30  Aaron Bockover  <abock@gnome.org>

	Banshee 1.0 RC1 (0.99.3) Released

2008-05-30  Aaron Bockover  <abock@gnome.org>

	* src/Extensions/Banshee.NotificationArea/Makefile.am: Build fix

2008-05-30  Aaron Bockover  <abock@gnome.org>

	* configure.ac: Bump to RC1

	* src/Extensions/Banshee.CoverArt/Banshee.CoverArt/CoverArtJob.cs: Remove
	redundant status message part

2008-05-30  Aaron Bockover  <abock@gnome.org>

	* src/Clients/Nereid/Nereid/ViewContainer.cs:
	* src/Core/Banshee.Widgets/Banshee.Widgets/SearchEntry.cs: Make the 
	filter menu work by inserting a query part when items are selected

	* libbanshee/banshee-player-pipeline.c: Disabled the equalizer yet again
	because the element is still too buggy in GStreamer causing static

2008-05-30  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Audioscrobbler/Queue.cs:
	Don't use Hyena.DateTimeUtil since it has a bug with
	timezone/daylight-savings that reports times an hour off in some cases.